textwire/testdata/good/before/002.with-inserts/index.tw
@use("title-and-content")

@insert("title", "with inserts")

@insert("content")
<h1>With Inserts</h1>
<p>Some content</p>
@end
